<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Climora</string>
    <string name="temperature">%1$d°C</string>
    <string name="region_country">%1$s, %2$s</string>
    <string name="country_only">%1$s</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_location_denied">Location permission denied. You can still search by city.</string>
    <string name="error_title">Error</string>
    <string name="ok">OK</string>
    <string name="search_hint">Search city…</string>
    <string name="icon_humidity">💧</string>
    <string name="label_humidity">Humidity</string>
    <string name="icon_feels_like">🌡️</string>
    <string name="label_feels_like">Feels like</string>
    <string name="forecast_today">Today</string>
    <string name="forecast_temp_range">%1$d° / %2$d°</string>
</resources>
